fix bad overlap with menu on /projects

--- a/src/components/ProjectsSelector/index.module.css
+++ b/src/components/ProjectsSelector/index.module.css
@@ -1,6 +1,4 @@
 .container {
-    position: relative;
-    right: -10px;
     display: flex;
     gap: 1rem;
     margin-top: .75rem;
